# MesComptes

./: .gitignore  CMakeLists.txt  version.h.in
resources/: Info.plist
src/: CMakeLists.txt  gen_version.cmake  main.cpp
src/app/: MesComptesApp.cpp  MesComptesApp.hpp
src/core/: Account.hpp  DataStore.cpp  DataStore.hpp  Database.cpp  Database.h  LanguageManager.cpp  LanguageManager.h  RecurringTransaction.cpp  RecurringTransaction.h  Settings.cpp  Settings.h  Settings.hpp  Totals.hpp  Transaction.cpp  Transaction.h  Txn.hpp  Type.hpp  version.h  version.h.in
src/db/: Migrations.cpp  Migrations.hpp  SqliteDB.cpp  SqliteDB.hpp
src/db/dao/: AccountDAO.cpp  AccountDAO.hpp  TxnDAO.cpp  TxnDAO.hpp  TypeDAO.cpp  TypeDAO.hpp
src/lang/: en_US.po  fr_FR.po
src/ui/: AccountsPage.cpp  AccountsPage.hpp  CSVImportDialog.cpp  CSVImportDialog.h  HomePage.cpp  HomePage.hpp  InfoDialog.cpp  InfoDialog.h  MainFrame.cpp  MainFrame.h  MainFrame.hpp  PreferencesDialog.cpp  PreferencesDialog.h  PrefsPage.cpp  PrefsPage.hpp  RecurringDialog.cpp  RecurringDialog.h
src/ui/dialogs/: ImportCsvDlg.cpp  ImportCsvDlg.hpp  TxnEditDlg.cpp  TxnEditDlg.hpp
tests/: CMakeLists.txt  dao_tests.cpp  totals_tests.cpp
